working instructin record matches, see caveats
exact match : simple.rv64gc_with_zbx.bare.riscv
exact match : bmi_median.rv64gc_nozbx.bare.riscv
exact match : bmi_median.rv64gc_with_zbx.bare.riscv
exact match : bmi_dhrystone.rv64gc_nozbx.bare.riscv"
exact match : bmi_dhrystone.rv64gc_with_zbx.bare.riscv"
exact match : coremark_10.rv64gc_nozbx.bare.riscv
exact match : coremark_10.rv64gc_with_zbx.bare.riscv
exact match : dhrystone_opt1.10.rv64gc_nozbx.bare.riscv
exact match : dhrystone_opt1.10.rv64gc_with_zbx.bare.riscv
exact match : dhrystone_opt2.10.rv64gc_nozbx.bare.riscv
exact match : dhrystone_opt2.10.rv64gc_with_zbx.bare.riscv
exact match : dhrystone_opt3.10.rv64gc_nozbx.bare.riscv
exact match : dhrystone_opt3.10.rv64gc_with_zbx.bare.riscv

caveats:
likely bugs in dromajo when executing the bmi_pmp bpm_sanity elfs
post the simpoint merge

difference : bmi_pmp.rv64gc_nozbx.bare.riscv - dromajo bug likely
difference : bmi_pmp.rv64gc_with_zbx.bare.riscv - dromajo bug likely
difference : bmi_sanity.rv64gc_nozbx.bare.riscv - dromajo bug likely
difference : bmi_sanity.rv64gc_with_zbx.bare.riscv - dromajo bug likely
difference : zbx.rv64gc_with_zbx.bare.riscv - dromajo bug likely

--- a/riscv/riscv.mk.in
+++ b/riscv/riscv.mk.in
@@ -37,7 +37,7 @@ riscv_install_hdrs = \
 	memtracer.h \
 	mmu.h \
 	platform.h \
-	spike_stf.h \
+	stf_handler.h \
 	processor.h \
 	rocc.h \
 	sim.h \
@@ -50,7 +50,6 @@ riscv_precompiled_hdrs = \
 	insn_template.h \
 
 riscv_srcs = \
-	spike_stf.cc \
 	processor.cc \
 	execute.cc \
 	dts.cc \
