--- a/Makefile.in
+++ b/Makefile.in
@@ -105,7 +105,7 @@ LDFLAGS += $(STF_LIB)
 # These all appear on the command line, from lowest precedence to
 # highest.
 
-default-CFLAGS   := -DPREFIX=\"$(prefix)\" -Wall -Wno-unused -Wno-nonportable-include-path -DNDEBUG -O3 -fPIC 
+default-CFLAGS   := -DPREFIX=\"$(prefix)\" -Wall -Wno-unused -DNDEBUG -O3 -fPIC 
 default-CXXFLAGS := $(default-CFLAGS) -std=c++2a
 
 mcppbs-CPPFLAGS := @CPPFLAGS@
